--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ numpy==1.24.3
 requests==2.32.4
 python-dotenv==1.0.0
 
-# 머신러닝 및 데이터 분석
+# AI 및 머신러닝
+openai==1.102.0
 scikit-learn==1.6.1
 sentence-transformers==4.1.0
 umap-learn==0.5.9.post2
